# rath-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/audio/: stt.rs  tts.rs
src/core/: error.rs  mod.rs  provider.rs  url.rs  usage.rs
src/embeddings/: mod.rs
src/images/: mod.rs
src/llm/: mod.rs  schema.rs  tool.rs
src/providers/: anthropic.rs  fal.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/video/: mod.rs
