[package]
name = "rath-rs"
version = "0.2.2"
edition = "2024"
description = "Provider-agnostic Rust clients and wire types for agentic AI APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vivsh/rath-rs"
keywords = ["llm", "agent", "ai", "multimodal", "openai"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "rath"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
gemini-rust = "1.7.1"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
